kustomize/nextcloud/overlays/thomelab/nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  defaultBackend:
    service:
      name: nextcloud-helm-chart
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - nextcloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora
  namespace: nextcloud
spec
